refactor: replace `spreadQtyDelivered` method with `updateByOrderLineIds` in `QtyReservationRepository`
- Updated logic to use a stateful `UnaryOperator` for delivering quantities.
- Simplified `QtyReservationService` by delegating quantity spreading to `updateByOrderLineIds`.
- Enhanced tests to reflect method replacement and added a